--- a/src/app/scan/scan.page.html
+++ b/src/app/scan/scan.page.html
@@ -1,9 +1,79 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>scan</ion-title>
+    <ion-title></ion-title>
+ 
+    
+
+    <ion-buttons slot="start">
+      <ion-back-button [routerLink]="['/staff']"
+      routerLinkActive="router-link-active" class="back" defaultHref="home"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  
+  <ion-card>
+    <ion-card-header>
+     
+    </ion-card-header>
+  
+    <ion-card-content>
+    
+      <ion-datetime (click)="getDate(mydate)" [(ngModel)]="mydate" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" yearValues="2021,2022" dayValues="01,02,03,04,05,06,07,08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31"></ion-datetime>
+      
+
+
+      <ion-list >
+      <ion-radio-group [(ngModel)]="status" >
+        <ion-list-header>
+          <ion-label >Test Result</ion-label>
+        </ion-list-header>
+      
+        <ion-item>
+          <ion-label  color="secondary">Negative</ion-label>
+          <ion-radio slot="start" value="Negative"></ion-radio>
+        </ion-item>
+          <ion-item>
+            <ion-label  color="danger" >Positive</ion-label>
+            <ion-radio  slot="start" value="Positive"></ion-radio>
+          </ion-item>
+
+          {{status}}
+          
+          <ion-button  [routerLink]="['/staff', status + '&' + mydate]"
+          routerLinkActive="router-link-active" expand="full" color="warning"> Save </ion-button>
+        
+      
+          
+        </ion-radio-group>
+      </ion-list>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
+
+
+
+
+    
+
+
+
+
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
