--- a/src/app/staff/staff.page.html
+++ b/src/app/staff/staff.page.html
@@ -7,39 +7,47 @@
 </ion-header>
 
 <ion-content>
-  <ion-chip>
-    <ion-avatar >
-      <img class="profile_pic" src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-    </ion-avatar>
-  </ion-chip>
-
+  
   <ion-card>
     <ion-item href="#" >
       <ion-icon></ion-icon>
       <ion-label>*** KİŞİNİN İSMİ GELECEK***</ion-label>
     </ion-item>
   
-    <ion-item href="#">
-      <ion-icon></ion-icon>
-      <ion-label>****TYPE GELECEK***</ion-label>
-    </ion-item>
   </ion-card>
 
-  <ion-card>
-    <ion-card-content>
-      TEST RESULT : ***BURAYA RESULT ÇEKİLECEK***
-    </ion-card-content>
-  </ion-card>
+  <div>
 
-  <ion-card>
-    <ion-card-content>
-      last test update time: ***test yükleyeli ne kadar oldu bilgisi gelecek***
-    </ion-card-content>
-  </ion-card>
+    <ion-card>
+      <ion-card-content> <div> TEST RESULT : </div>
+        <div *ngIf="status==='Positive'"> 
+          
+          <ion-badge color="danger"> {{status}} </ion-badge>
+        </div>
   
-  <ion-button color="light" class="center" [routerLink]="['/test-upload']" routerLinkActive="router-link-active" >Enter new test result</ion-button>
+        <div *ngIf="status==='Negative'"> 
+          
+          <ion-badge color="success"> {{status}} </ion-badge>
+        </div>
+  
+      </ion-card-content>
+    </ion-card>
+  
+    <ion-card>
+      <ion-card-content >last test update time:
+        <div class="lut">  {{date}} </div>
+  
+      </ion-card-content>
+    </ion-card>
+    
+  </div>
+  
+  <ion-button expand="block" color="secondary"  [routerLink]="['/scan']" routerLinkActive="router-link-active" >Update test result</ion-button>
 
-  <ion-button class="center" color="danger"  [routerLink]="['/student-list']" routerLinkActive="router-link-active" >Show Student List</ion-button>
+  <div>
+    <ion-card></ion-card>
+  </div>
+  <ion-button expand="block"  color="danger"  [routerLink]="['/student-list']" routerLinkActive="router-link-active" >Show Student List</ion-button>
 
 
 
