--- a/src/app/test-upload/test-upload.page.html
+++ b/src/app/test-upload/test-upload.page.html
@@ -2,7 +2,8 @@
   <ion-toolbar>
     
     <ion-buttons slot="start">
-      <ion-back-button [routerLink]="['/login']" routerLinkActive="router-link-active"  class="back" defaultHref="home"></ion-back-button>
+      <ion-back-button  [routerLink]="['/login']"
+      routerLinkActive="router-link-active" class="back" defaultHref="home"></ion-back-button>
     </ion-buttons>
     
   </ion-toolbar>
@@ -15,7 +16,37 @@
     </ion-card-header>
   
     <ion-card-content>
-      ****BU KISMA QR OKUMAYI EKLİYCEZ*
+
+      <ion-datetime (click)="getDate(mydate)" [(ngModel)]="mydate" display-format="MMM DD, YYYY" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" yearValues="2022,2021" dayValues="01,02,03,04,05,06,07,08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31"></ion-datetime>
+
+      {{mydate}}
+
+      <ion-list>
+      <ion-radio-group  [(ngModel)]="status" value="testresult">
+        <ion-list-header>
+          <ion-label>Test Result</ion-label>
+        </ion-list-header>
+      
+        <ion-item>
+          <ion-label  color="secondary">Negative</ion-label>
+          <ion-radio  slot="start" value="Negative"></ion-radio>
+        </ion-item>
+          <ion-item>
+            <ion-label  color="danger" >Positive</ion-label>
+            <ion-radio slot="start" value="Positive"></ion-radio>
+          </ion-item>
+      
+          
+        </ion-radio-group>
+      </ion-list>
+      {{status}}
+
+      <ion-button  [routerLink]="['/login', status + '&' + mydate]"
+      routerLinkActive="router-link-active"  expand="full" color="warning"> Save </ion-button>
+
+
+
+
     </ion-card-content>
   </ion-card>
 
